# logpile

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LOG_GENERATOR.md  PRODUCTION_READY.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  RELEASE_CHECKLIST.md  TESTING.md  TIMESTAMP_FORMATS.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit  pre-push
examples/: TIMESTAMP_FORMATS.md  log_generator.rs
examples/scripts/: demo_logpile.sh  generate_test_logs.sh  live_demo.sh  test_examples.sh
src/: bucket.rs  cli.rs  lib.rs  main.rs  output.rs  plot.rs  processor.rs  reader.rs  timestamp.rs
tests/: follow_integration_tests.rs  integration_tests.rs  simple_follow_tests.rs
