[package]
name = "logpile"
version = "0.2.0"
edition = "2021"
authors = ["lashdown"]
description = "A fast CLI tool to search logs by regex, bucket matches by time, and visualize patterns with charts"
license = "MIT"
repository = "https://github.com/lashdown/logpile"
keywords = ["log", "analysis", "cli", "regex", "visualization"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
regex = "1.10"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
anyhow = "1.0"
thiserror = "1.0"
textplots = "0.8"
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "line_series", "ttf"] }
image = "0.24"

[lib]
name = "logpile"
path = "src/lib.rs"

[[bin]]
name = "logpile"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.8"
